# imagetools

./: .gitignore  README  README.md  baseline_results.md  consolidate_companion.py  convert_pyramid.py  extract_scenes.py  image-tools.yml  pyproject.toml  qupath_svg.py  requirements.txt  setup.py  setup_prerequisites.sh
cloud/aws-lambda/: imagetools.lambda.Dockerfile
cloud/aws-lambda/lambda/: lambda.py
examples/: classes.json
imagetools/: __init__.py  batch_id.py  consolidate_companion.py  convert_pyramid.py  db_logger.py  extract_scenes.py  qupath_svg.py
scripts/: convert-czi.sh
