[project]
name = "imagetools"
version = "0.1.0"
description = "Library for converting images"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "USC Information Sciences Institute, Informatics Systems Research Division", email = "isrd-support@isi.edu" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "lxml",
    "deriva",
    "xmltodict",
    "zarr",
    "numpy",
    "scikit-image",
    "imagecodecs",
    "tifffile",
]

[project.urls]
Homepage = "https://github.com/informatics-isi-edu/imagetools"
Repository = "https://github.com/informatics-isi-edu/imagetools"

[project.scripts]
extract_scenes = "imagetools.extract_scenes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib",
]