[project]
name = "imagetools"
version = "0.1.0"
description = "Library for converting microscopy images to IIIF-compatible formats"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "USC Information Sciences Institute, Informatics Systems Research Division", email = "isrd-support@isi.edu" }
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "lxml",
    "deriva",
    "xmltodict",
    "zarr",
    "numpy",
    "scikit-image",
    "imagecodecs",
    "tifffile",
]

[project.optional-dependencies]
pyvips = ["pyvips"]

[project.urls]
Homepage = "https://github.com/informatics-isi-edu/imagetools"
Repository = "https://github.com/informatics-isi-edu/imagetools"
Issues = "https://github.com/informatics-isi-edu/imagetools/issues"

[project.scripts]
extract_scenes = "imagetools.extract_scenes:main"
consolidate_companion = "imagetools.consolidate_companion:main"
convert_pyramid = "imagetools.convert_pyramid:main"
qupath_svg = "imagetools.qupath_svg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "matplotlib",
]

[tool.imagetools.prerequisites]
bioformats2raw = "0.11.0"
raw2ometiff = "0.9.0"
bftools = "8.4.0"